--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <article class="mainbody">
 	<section class="date-place">
 
-		<div class="place"></div>
-		<div></div>
+		<div class="place">
+		</div>
 		<div class="refresh">
 			<button id="refreshes">更新</button>
 		</div>
@@ -36,7 +36,7 @@
 			<div class="weather-icon">
 				<div class="day">
 					<figure>
-						<figcaption>实时天气情况</figcaption>
+						<figcaption>实时天气</figcaption>
 					</figure>
 					<figure>
 						<img src="" id="day-pic">
@@ -55,7 +55,6 @@
 			<header>温馨提示</header>
 			<div class="warmitems">
 				<span>紫外线指数：</span>
-
 				<code></code>
 			</div>
 			<div class="warmitems">
@@ -71,15 +70,14 @@
 	<section class="baidumap">
 		<div class = "containers" id="container"></div>
 	</section>
-	<div class="mycanvsa" >
-        <div class = "empty">
-            <canvas id="myChart" width="80%" height="20%" ></canvas>
-        </div>
+	<section class="mycanvas">
+	<canvas id="myChart" width="100%" height="80%" style="background-color: rgba(255,253,244,0.2); "></canvas>
+	</section>
+	<div class="week-title" >
+		未来一周天气
+		</div>
+	<section class="week-weather">
 
-	</div>
-
-	<section class="week-weather-empty">
-        <div class="week-weather">
 		<div class="item" id="Monday">
 			<img src="">
 			<div class="item-mess">
@@ -164,7 +162,7 @@
 				</div>
 			</div>
 		</div>
-        </div>
+
 	</section>
     <section class="footer">
         <div class ="authors">
