--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 	</section>
     <section class="footer">
         <div class ="authors">
-            <code>版权所有:单守平</code>
+            <code>版权所有:</code>
         </div>
     </section>
 </article>
